fix spacing of flex elements and sign up form for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,4 +309,10 @@ h2 {
   .instructors-box{
     width: 75%;
   }
+
+  .flex-col-gap{
+    row-gap: 15px;
+    column-gap: 0;
+  }
+
 }
